testsuite/poke.pkl/immutable-diag-1.pk
/* { dg-do compile } */

type Exception /* { dg-error "already defined" } */
     = int;
